# ProjectBank

./: .editorconfig  .gitignore  README.md  projectbank.env.sample  pyproject.toml
data/: operations.xlsx  ~$operations.xlsx
report/: report_20250809_181949.csv
src/: main.py  reports.py  services.py
tests/: test_reports.py  test_services.py
